# TITA_RL_SIM2SIM

./: README.md
robot_control/robot_rl_sim/: CMakeLists.txt  package.xml
robot_control/robot_rl_sim/include/robot_rl_sim/: robot_rl_sdk.hpp  robot_rl_sim.hpp
robot_control/robot_rl_sim/launch/: robot_rl_sim.launch.py
robot_control/robot_rl_sim/models/tita_isaacgym/: config.yaml  model_1900.pt  model_cpu.pt  model_cpu_wheel.pt  policy_1.pt
robot_control/robot_rl_sim/src/: observation_buffer.cpp  robot_rl_sdk.cpp  robot_rl_sim.cpp
robot_control/robot_rl_sim/worlds/: stairs.world
robot_description/tita_description/: CMakeLists.txt  package.xml
robot_description/tita_description/config/: controllers.yaml
robot_description/tita_description/launch/: robot_description.launch.py
robot_description/tita_description/urdf/: tita_v618.urdf
robot_description/tita_description/xacro/: description.xacro  robot.xacro  ros2_control.xacro
robot_description/tita_description/xml/: robot.xml
robot_description/tita_mujoco_sim/: package.xml  setup.cfg  setup.py  step.py
robot_description/tita_mujoco_sim/launch/: mujoco_sim.launch.py
robot_description/tita_mujoco_sim/src/tita_mujoco_sim/: keyboard_teleop.py  mujoco_sim_node.py
