<?xml version="1.0"?>
<package format="3">
  <name>tita_mujoco_sim</name>
  <version>0.0.1</version>
  <description>MuJoCo simulation node for TITA robot</description>

  <maintainer email="1499217911@qq.com">Xing He</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
